<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight" android:id="@+id/linearLayoutCompat">


    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_close_text"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btn_close"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_close" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_logo_height"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardBackgroundColor="@color/colorPrimaryDark" android:id="@+id/cardView2"
                    app:cardElevation="8dp">
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                              android:orientation="horizontal">

                    <ImageView
                            android:layout_width="@dimen/about_logo_width"
                            android:layout_height="match_parent" app:srcCompat="@drawable/ic_therock_about"
                            android:id="@+id/imageView"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:paddingHorizontal="10dp" android:contentDescription="@string/rock_image_logo"
                            android:layout_gravity="start" android:paddingTop="8dp" android:paddingBottom="8dp"/>
                    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                              android:text="Unofficial App"
                              android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                              android:gravity="center_vertical"
                              android:visibility="visible"
                              android:textColor="@color/colorMainText" android:textAlignment="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_terms1"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2"
                    android:text="@string/about_terms_one" android:textColor="@color/colorAboutText"
                    android:layout_margin="@dimen/about_text_padding"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_rock_wesite"
                    android:text="@string/rock_website_norepeat" android:textSize="14sp"
                    android:autoLink="web" android:linksClickable="true"
                    android:textColor="@color/colorTextLink"
                    android:textColorLink="@color/colorTextLink"
                    android:layout_margin="@dimen/about_text_padding" android:textAlignment="center"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_comp_tc"
                    android:text="@string/about_comp_tc_text" android:textColor="@color/colorAboutText"
                    android:layout_margin="@dimen/about_text_padding"/>

            <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/about_tc_link"
                    android:text="@string/about_tc_link_string" android:textSize="14sp"
                    android:textColor="@color/colorPrimary" android:textAlignment="center" android:autoLink="web"
                    android:layout_height="wrap_content" android:linksClickable="true"
                    android:textColorLink="@color/colorTextLink"
                    android:layout_margin="@dimen/about_text_padding"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_note"
                    android:text="@string/about_terms_two"
                    android:textColor="@color/colorAboutText"
                    android:layout_margin="@dimen/about_text_padding"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"

                    android:text="@string/rock_copyright"
                    android:textColor="@color/colorAboutText"
                    android:layout_margin="@dimen/about_text_padding"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/attribution"

                    android:text="@string/about_logo_attribution"
                    android:textColor="@color/colorAboutText"
                    android:layout_margin="@dimen/about_text_padding" android:textAlignment="center"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/attribution_link"

                    android:text="@string/about_logo_attribution_link"
                    android:textColor="@color/colorAboutText"
                    android:layout_margin="@dimen/about_text_padding" android:autoLink="web"
                    android:linksClickable="true" android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
