<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardView"
            android:layout_marginTop="8dp"
            style="@style/TheRockStyle.CardStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@color/colorPrimaryLight">

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp" app:srcCompat="@android:drawable/ic_menu_report_image"
                    android:id="@+id/imageArtwork"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/artwork_text"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTimeDate"
                    tools:text="Time and Date"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintTop_toTopOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSongTitle"
                    tools:text="Song Title"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTimeDate"
                    app:layout_constraintStart_toStartOf="@+id/tvTimeDate" android:textSize="16sp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvArtist"
                    tools:text="Artist" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvSongTitle"
                    app:layout_constraintStart_toStartOf="@+id/tvSongTitle" android:textSize="16sp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/tv_time_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/imageArtwork"
                    app:layout_constraintStart_toEndOf="@+id/imageArtwork" android:layout_marginStart="16dp"/>
            <TextView
                    android:text="@string/tv_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/tv_artist_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" android:textSize="16sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
